# hengji

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  NOTICE  README.en.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: launch.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: crypto.rs  db.rs  lib.rs
apps/web/: package.json
apps/web/src/: App.tsx  app.css  biz.ts  confirm.ts  db.ts  format.ts  import-llm.ts  import.ts  recurring.ts  settings.ts
apps/web/src/components/: AiCard.tsx  DestroyedScreen.tsx  RecurringRow.tsx  SecurityCard.tsx  TxnRow.tsx  UnlockScreen.tsx
apps/web/src/views/: Accounts.tsx  Budgets.tsx  Customers.tsx  Dashboard.tsx  Documents.tsx  FeeDefinitions.tsx  ImportReview.tsx  Invest.tsx  Orders.tsx  OverviewAll.tsx  Products.tsx  Purchases.tsx  QuickEntry.tsx  Reconcile.tsx  Recurring.tsx  Settings.tsx  Suppliers.tsx  Transactions.tsx
apps/web/test/: import-llm.test.ts  recurring.test.ts
demo/: index.html  serve.mjs
docs/: README.md  accounts.md  books.md  development.md  fees.md  inventory.md  modes.md  multi-currency.md  orders.md  overview.md  purchases.md  reconciliation.md  recording.md  settings.md
docs/design/: encryption.md  soft-path-plan.md
docs/design/en/: encryption.md
docs/en/: README.md  accounts.md  books.md  development.md  fees.md  inventory.md  modes.md  multi-currency.md  orders.md  overview.md  purchases.md  reconciliation.md  recording.md  settings.md
